test/Syntax3.err
4: syntax error: 'to' without 'end'!
		print 'nope
		           ^
