test/Syntax3.logo
# negative syntax test 3: to without end

to foobar
	print 'nope